--- a/docs/Pat.1
+++ b/docs/Pat.1
@@ -1,4 +1,4 @@
-[[Pat]]
+[[Pat:Pat.1.html]]
 
 It is a successor to the Cat DSL. Originally written to test proxy
 it can be used for testing CLIs Network Servers and Cients, ProxyServers etc depending on the connectors used.
@@ -31,7 +31,7 @@ eg.
  |cat examples.seq 
  # pat sequence file
  [
- #drb requires the netagent running in the remote machines
+ #drb requires the hiveclient running in the remote machines
  examples/drb [drb]
  examples/xml [xml tc]
  examples/cli [cli tc]
