Edited wiki page CaseStudies through web user interface.

--- a/wiki/CaseStudies.wiki
+++ b/wiki/CaseStudies.wiki
@@ -2,11 +2,10 @@ CaseStudies
 
 Some case studies.
 
-[Hive-case1] (Using .seq files)
+HiveCase1 (Using .seq files)
 
-[Hive-case2] (Using the mailwatcher)
+HiveCase2 (Using the mailwatcher)
 
-[Hive-case3] (start from scratch)
+HiveCase3 (start from scratch)
 
-[Hive-case4] (synchronization)
-
+HiveCase4 (synchronization)
