Edited wiki page Hive through web user interface.

--- a/wiki/Hive.wiki
+++ b/wiki/Hive.wiki
@@ -67,7 +67,7 @@ ruby hiveclient.rb -v
 It will start up the hive client, and will bind to the irc server on hivehost. Repeat this with all the clients. The base variable may also be provided directly as an argument for hiveclient.rb instead of making use of .hiverc. 
 (For details refer to [QuickTutorial])
 
-he Hive clients are IRC bots running one per machine. The name by which client connect is generally an underscore (_) followed by the machine hostname. Each client script just contains a tiny bootstrap code which lets it connect to the Repository (Hosted on a Webserver). As it comes up, the client downloads the IRC client code and initial traits from the repository and joins the #hive channel in Hive server. Any channels that it was connected earlier before it went down is also joined. After it connects, it waits for any applicable commands in the channels it is connected to. The commands sent by the user to a channel are applicable by default to all hive clients in that channel. The user can restrict the machines applicability by using a condition in the 'where' clause. (Exmples are given in the end.)
+he Hive clients are IRC bots running one per machine. The name by which client connect is generally an underscore followed by the machine hostname. Each client script just contains a tiny bootstrap code which lets it connect to the Repository (Hosted on a Webserver). As it comes up, the client downloads the IRC client code and initial traits from the repository and joins the #hive channel in Hive server. Any channels that it was connected earlier before it went down is also joined. After it connects, it waits for any applicable commands in the channels it is connected to. The commands sent by the user to a channel are applicable by default to all hive clients in that channel. The user can restrict the machines applicability by using a condition in the 'where' clause. (Exmples are given in the end.)
 
 When a client receives a command, it takes the command apart to see the traits involved. Each trait can be thought of as an object that interprets the messages sent to it in a certain way. 
 
